--- a/src/css/Navbar.css
+++ b/src/css/Navbar.css
@@ -16,6 +16,7 @@ p{
     margin: auto;
     align-items: center;
     justify-content: space-between;
+    padding: 1rem 0;
 }
 .navbar__brand{
     border: 1px solid;
