--- a/src/css/Navbar.css
+++ b/src/css/Navbar.css
@@ -4,12 +4,17 @@ p{
 }
 
 .header{
-    border: 1px solid;
+   
     width: 100%;
+    position: fixed;
+    background: rgba(255,255,255,0.7);
+    z-index: 1;
+    /* height: 71px; */
+    padding: 10px 0;
 }
 
 .navbar{
-    border: 1px solid;
+    
     display: flex;
     font-family: 'Poppins', sans-serif;
     max-width: 1280px;
@@ -19,7 +24,7 @@ p{
     padding: 1rem 0;
 }
 .navbar__brand{
-    border: 1px solid;
+   
     width: 199px;
     height: 42px;
 }
@@ -29,14 +34,14 @@ p{
 }
 
 .navbar__list{
-    border: 1px solid;
+    
     /* display: flex; */
     /* flex: 0; */
     width: 45%;
 }
 
 .navbar__list{
-    border: 1px solid;
+     
     display: flex;
     align-items: center;
     justify-content: space-betwe   
@@ -44,20 +49,42 @@ p{
 
 .navbar__list > ul{
     width: 100%;
-    border: 1px solid;
+    /* border: 1px solid; */
     display: flex;
     align-items: center;
     justify-content: space-between;
+    margin-bottom: 0;
+    
 }
 .navbar__list > ul > li{
-   list-style: none;
-   text-transform: uppercase;
-   font-size: 1.6rem;
+    list-style: none;
+    text-transform: uppercase;
+    font-size: 1.5rem;
+    display: flex;
+    align-items: center;
+}
+
+.arrowBottom{
+    
+    margin-left: 7px;
+
 }
 .navbar__icons{
-    border: 1px solid;
-    width: 15%;
+     
+    width: 11%;
+    font-size: 1.5rem;
     display: flex;
     align-items: center;
     justify-content: space-between;
+}
+
+.search,.instagram,
+.facebook,.instagram,.pintrest{
+    display: flex;
+    align-items: center;
+    
+}
+
+.search{
+    font-size: 20px;
 }
