--- a/src/css/Footer.css
+++ b/src/css/Footer.css
@@ -78,6 +78,9 @@
    
     outline: 1px solid rgb(228 207 207);
 }
+.img > img{
+    width: 100%;
+}
 .copyright{
     background-color: #111;
     color: #d6d6d6;
