--- a/src/css/Slider.css
+++ b/src/css/Slider.css
@@ -32,3 +32,41 @@
      
     margin-bottom: 0;
 }
+
+@media (max-width : 480px) {
+    .slider{
+        border: 1px solid;
+    height: 57vh;
+    }
+    .carousel {
+        position: relative;
+        height: 100%;
+    }
+    .carousel-inner {
+        position: relative;
+        width: 100%;
+        overflow: hidden;
+        height: 100% !important;
+    }
+    .carousel-item{
+        height: 100%;
+    }
+    .carousel-caption {
+        position: absolute;
+        bottom: 3.25rem;
+        width: 43%;
+        border: 1px solid;
+        left: 4%;
+        padding-top: 1.25rem;
+        padding-bottom: 1.25rem;
+        color: #fff;
+        text-align: center;
+    }
+    .carousel-caption > h3 {
+        font-size: 2rem;
+         
+    }
+    .sliderImg{
+        height: 100%;
+    }
+}
