--- a/src/css/brands.css
+++ b/src/css/brands.css
@@ -27,4 +27,15 @@
     font-size: 1.3rem;
 }
 
- 
+ @media (max-width : 480px){
+
+    .brandRow {
+        display: flex;
+        /* width: 100%; */
+        max-width: 1250px;
+        margin: auto;
+        justify-content: space-between;
+        padding: 3rem 0;
+        overflow: hidden;
+    }
+ }
