--- a/src/css/UniqueColor.css
+++ b/src/css/UniqueColor.css
@@ -63,4 +63,11 @@
         background-color: #d6d6d6;
         overflow: hidden;
     }
+    .OurUniqDiv > h1 {
+        font-size: 2.5rem;
+        font-weight: 400;
+        line-height: 50px;
+        height: 50px;
+        margin-bottom: 2rem;
+    }
 }
