--- a/src/css/UniqueColor.css
+++ b/src/css/UniqueColor.css
@@ -23,7 +23,7 @@
     display: flex;
     max-width: 1250px;
 }
-.card{
+.main_card{
     width: 20%;
     border: 2px solid #d4c7c7;
     transition: all .3s ease;
@@ -33,7 +33,7 @@
      
 }
 
-.card:hover{
+.main_card:hover{
     transition: all .3s ease;
      border: 2px solid rgba(255, 255, 255, 0);;
 }
@@ -69,5 +69,24 @@
         line-height: 50px;
         height: 50px;
         margin-bottom: 2rem;
+    }
+    .cardRow {
+        display: flex;
+        width: 100%;
+        /* max-width: 1250px; */
+        overflow: hidden;
+        overflow-x: scroll;
+    }
+    .main_card {
+        /* width: 20%; */
+        width: 100%;
+        border: 2px solid #d4c7c7;
+        transition: all .3s ease;
+        min-height: 300px;
+        background: transparent;
+        margin: 1rem;
+    }
+    .Card__img > img {
+        width: 156px;
     }
 }
