--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -3,7 +3,16 @@
     flex-direction: column;
     justify-content: space-between;
 }
-
+.product_img{
+    width: 100%;
+}
+.row-cols-lg-4>* {
+    flex: 0 0 auto;
+    width: 25%;
+    margin: 1rem 0;
+    display: flex;
+    align-items: flex-end;
+}
 .productBanner{
     background: linear-gradient(rgba(0, 0, 0, 0.295),rgba(0, 0, 0, 0.288)) , url("../../Assets/product/brickbg.jpg");
    
