--- a/src/css/UniqueColor.css
+++ b/src/css/UniqueColor.css
@@ -1,5 +1,5 @@
 .unique{
-    background-color:#d6d6d6;
+    background-color:#e9ecef29;
 }
 
 .OurUniqDiv{
@@ -22,40 +22,50 @@
 .cardRow{
     display: flex;
     max-width: 1250px;
+    flex-wrap: wrap;
 }
 .main_card{
-    width: 20%;
+    width: 15%;
     border: 2px solid #d4c7c7;
     transition: all .3s ease;
-    min-height: 300px;
     background: transparent;
     margin: 1rem;
-     
+    overflow: hidden;
 }
 
 .main_card:hover{
-    transition: all .3s ease;
-     border: 2px solid rgba(255, 255, 255, 0);;
+    transition: all .5s ease;
+ 
+     /* border: 2px solid rgba(255, 255, 255, 0); */
 }
 .Card__img{
     width: 100%;
 }
 
+.main_card:hover .Card__img{
+    transform: scale(1.08);
+    transition: all .5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+}
+
 .Card__img > img{
     width: 100%;
+    height: 20rem;
 }
 
 .card__name > span{
     font-size: 1.4rem;
     text-transform: uppercase;
-    border: 1px solid white;
+   
     display: block;
-    width: 90%;
-    border-radius: 51px 0 5px px;
-    margin-top: 5rem;
-    padding: .5rem 0;
+    font-weight: 500;
+    text-align: center;
+    font-family: 'poppins';
+   
+    margin-top: 1rem auto;
+    padding: 0.5rem 0;
+    margin: 1rem 0 1rem 0;
     border-radius: 0 4px 4px 0px;
-    background: white;
+    
 }
 
 @media (max-width : 480px){
