--- a/src/css/Slider.css
+++ b/src/css/Slider.css
@@ -18,7 +18,7 @@
   position: relative;
   display: flex !important;
   float: left;
-  height: 85vh;
+  height:  auto;
   /* border: 1px solid; */
   width: 100%;
   align-items: center;
@@ -54,7 +54,8 @@
 
 @media (max-width: 480px) {
   .slider {
-    height: 57vh;
+    height:  100%;
+    width : 100%;
   }
   .carousel {
     position: relative;
@@ -71,15 +72,14 @@
     height: 100%;
   }
   .carousel-caption {
-    position: absolute;
-    bottom: 3.25rem;
-    width: 45%;
-
-    left: 4%;
-    padding-top: 1.25rem;
-    padding-bottom: 1.25rem;
-    color: #fff;
-    text-align: center;
+      /* position: absolute; */
+      bottom: 3.25rem;
+      width: 45%;
+      left: 4%;
+      padding-top: 1.25rem;
+      padding-bottom: 1.25rem;
+      /* color: #fff; */
+      text-align: center;
   }
   .carousel-caption > h3 {
     font-size: 2rem;
