--- a/src/css/UniqueColor.css
+++ b/src/css/UniqueColor.css
@@ -1,5 +1,6 @@
 .unique{
-    background-color:#e9ecef29;
+    background-color: #f8f9fa;
+    overflow: hidden;
 }
 
 .OurUniqDiv{
@@ -8,7 +9,6 @@
     margin: auto;
     align-items: center;
     flex-direction: column;
-     
     padding: 4rem 0;
 }
  
@@ -69,10 +69,7 @@
 }
 
 @media (max-width : 480px){
-    .unique {
-        background-color: #d6d6d6;
-        overflow: hidden;
-    }
+   
     .OurUniqDiv > h1 {
         font-size: 2.5rem;
         font-weight: 400;
@@ -86,15 +83,15 @@
         /* max-width: 1250px; */
         overflow: hidden;
         overflow-x: scroll;
+        justify-content: space-evenly;
     }
     .main_card {
-        /* width: 20%; */
-        width: 100%;
+        width: 43%;
         border: 2px solid #d4c7c7;
         transition: all .3s ease;
-        min-height: 300px;
         background: transparent;
-        margin: 1rem;
+        margin: 1rem 0rem;
+        height: auto;
     }
     .Card__img > img {
         width: 156px;
